<resources>
    <string name="app_name">Hợp Âm Chuẩn</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="title_activity_search_view">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_database">Database Access Layer Test</string>
    <string name="title_activity_song_list_fragment">Song</string>
    <string-array name="navigation_drawer_default_items">
        <item>Main Page</item>
        <item>Browse Song</item>
        <item>My Playlist</item>
        <item>Favorites</item>
        <item>Search by Chords</item>
        <item>Chord Dictionary</item>
        <item>Synchronize</item>
    </string-array>
    <string-array name="song_list_method">
        <item>Recent view</item>
        <item>Just updated</item>
        <item>Random</item>
    </string-array>
    <string-array name="search_method">
        <item>Song name</item>
        <item>Author / Singer</item>
    </string-array>
    <string-array name="favorite_sort_method">
        <item>Recent</item>
        <item>ABC order</item>
    </string-array>
    <string-array name="chords_base_chord">
        <item>Am, Dm, E</item>
        <item>Am, F, C, G</item>
        <item>Em, C, G, D</item>
        <item>C, G, Am, Em, F, Dm</item>
    </string-array>
    <string-array name="chords_all_chord">
        <item>C</item>
        <item>Cm</item>
        <item>D</item>
        <item>Dm</item>
        <item>E</item>
        <item>Em</item>
        <item>F</item>
        <item>Fm</item>
        <item>G</item>
        <item>Gm</item>
        <item>A</item>
        <item>Am</item>
        <item>B</item>
        <item>Bm</item>
    </string-array>
    <string-array name="simple_chord">
        <item>C</item>
        <item>C#</item>
        <item>Cm</item>
        <item>C#m</item>
        <item>D</item>
        <item>D#</item>
        <item>Dm</item>
        <item>D#m</item>
        <item>E</item>
        <item>Em</item>
        <item>F</item>
        <item>F#</item>
        <item>Fm</item>
        <item>F#m</item>
        <item>G</item>
        <item>G#</item>
        <item>Gm</item>
        <item>G#m</item>
        <item>A</item>
        <item>A#</item>
        <item>Am</item>
        <item>A#m</item>
        <item>B</item>
        <item>Bm</item>
    </string-array>
    <string-array name="advanced_chord">
        <item>C7</item>
        <item>Cm7</item>
        <item>C9</item>
        <item>Cm9</item>
        <item>Cdim</item>
        <item>Csus4</item>
        <item>D7</item>
        <item>Dm7</item>
        <item>D9</item>
        <item>Dm9</item>
        <item>Ddim</item>
        <item>Dsus4</item>
        <item>E7</item>
        <item>Em7</item>
        <item>E9</item>
        <item>Em9</item>
        <item>Edim</item>
        <item>Esus4</item>
        <item>F7</item>
        <item>Fm7</item>
        <item>F9</item>
        <item>Fm9</item>
        <item>Fdim</item>
        <item>Fsus4</item>
        <item>G7</item>
        <item>Gm7</item>
        <item>G9</item>
        <item>Gm9</item>
        <item>Gdim</item>
        <item>Gsus4</item>
        <item>A7</item>
        <item>Am7</item>
        <item>A9</item>
        <item>Am9</item>
        <item>Adim</item>
        <item>Asus4</item>
        <item>B7</item>
        <item>Bm7</item>
        <item>B9</item>
        <item>Bm9</item>
        <item>Bdim</item>
        <item>Bsus4</item>
    </string-array>
    <string-array name="all_chord" />
    <string-array name="type_of_chord_view">
        <item>Standard chords</item>
        <item>Advanced chords</item>
        
    </string-array>
    <string name="example_text">Example Text</string>
    <string name="example_number">10</string>
    <string name="title_activity_test_text_view">Test TextView</string>
    <string name="title_activity_test_surface_view">MainActivity</string>
    <string name="title_activity_welcome_fragment">Home</string>
    <string name="title_activity_my_playlist_fragment">My Playlists</string>
    <string name="title_activity_my_favorite_fragment">Favorites</string>
    <string name="title_activity_playlist_detail_fragment">MainActivity</string>
    <string name="title_activity_playlist_manager_fragment">Playlist Manager</string>
    <string name="title_activity_find_by_chord">Search by chords</string>
    <string name="chord_search_search_button_text">Search</string>
    <string name="chord_search_add_chord_text">Add</string>
    <string name="title_activity_chord_view">Chord dictionary</string>
    <string name="title_activity_test">Activity Test</string>
    <string name="chord_finger_position">Finger positions</string>
    <string name="search_box_placeholder">Song name, author, singer…</string>
    <string name="current_version">Last Updated:</string>
    <string name="setting_auto_update">Check for new songs when start</string>
    <string name="setting_auto_update_button">Update new songs</string>
    <string name="setting_auto_sync">Sync playlist/favorite when start</string>
    <string name="update_now_button">Update now</string>
    <string name="title_activity_splash_screen">Hợp Âm Chuẩn</string>
    <string name="title_activity_test_list_song">TestListSong</string>
    <string name="login_activity_title">Login</string>
    <string name="login_account">LOGIN</string>
    <string name="login_account_description">Use HAC account</string>
    <string name="font_light">sans-serif-light</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_loginbtn">Login</string>
    <string name="login_cancelbtn">Cancel</string>
    <string name="default_artistname">N/A</string>
    <string name="profile_logout"><u>Disconnect account</u></string>
    <string name="proile_account_label">Connected account:</string>
    <string name="profile_sync_now">Synchronize data</string>
    <string name="title_activity_song_play_full_screen">SongPlayFullScreen</string>
    <string name="song_detail_click_to_fullscreen">Press to view all</string>
    <string name="title_activity_setting">Settings</string>
    <string name="song_detail_menu_favorite">Like</string>
    <string name="song_detail_menu_addtoplaylist">Add to playlist</string>
    <string name="song_detail_menu_share">Share</string>
    <string name="playlist_menu_rename">Rename</string>
    <string name="playlist_menu_delete">Delete playlist</string>
    <string name="app_website">www.hopamchuan.com</string>
    <string name="app_website_reg_link"><u>Register</u></string>
    <string name="register_link">http://hopamchuan.com/auth/register</string>
    <string name="title_add_to_playlist_dialog">Add to playlist…</string>
    <string name="add_playlist">Create playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="playlist_name">Playlist name…</string>
    <string name="playlist_description">Short description…</string>
    <string name="add_to_playlist_success">Added to playlist:</string>
    <string name="create_playlist">Create playlist</string>
    <string name="please_enter_playlist_name">Please enter playlist name</string>
    <string name="create_playlist_success">Playlist created:</string>
    <string name="rename_playlist_button">Save changes</string>
    <string name="rename_playlist_success">Playlist updated:</string>
    <string name="rename_playlist">Update playlist</string>
    <string name="playlist_deleted_success">Playlist removed!</string>
    <string name="are_you_sure_delete_playlist">Are you sure to delete this playlist?</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="remove_from_favorite">Unlike</string>
    <string name="removed_from_favorite">Removed from Favorite!</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="song_detail_menu_unfavorite">Unlike</string>
    <string name="song_detail_fontsize">Font size</string>
    <string name="song_detail_scroll">Auto Scroll</string>
    <string name="turn_on_auto_scroll">Turn on auto scroll</string>
    <string name="to_top">Go to top</string>
    <string name="song_detail_transpose">Transpose</string>
    <string name="transpose_down">Decrease</string>
    <string name="transpose_up">Increase</string>
    <string name="split_line">Split lines</string>
    <string name="join_line">Join lines</string>
    <string name="song_detail_scroll_label">Scrolling</string>
    <string name="play_music">Play music</string>
    <string name="view_full_screen">VIEW LYRICS</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="press_back_again">Press Back again to exit!</string>
    <string name="version">VERSION</string>
    <string name="update_songs">Download new songs</string>
    <string name="sync_playlist">Synchronize playlist/favorite</string>
    <string name="account">ACCOUNT</string>
    <string name="app_info_other">MISC</string>
    <string name="language">Language settings</string>
    <string name="app_info">Application information</string>
    <string name="app_vote">Vote this App on Play Store</string>
    <string name="view_same_singer_songs">SAME SINGER SONGS…</string>
    <string name="view_same_author_songs">SAME AUTHOR SONGS…</string>
    <string name="view_same_chord_songs">SAME CHORDS SONGS…</string>
    <string name="title_activity_artist_view">Artist</string>
    <string name="media_getting_url">Getting URL…</string>
    <string name="media_buffering_file">Buffering…</string>
    <string name="media_url_fail">Error: music link is not available!</string>
    <string name="notif_title_info">Info</string>
    <string name="already_lasted_version">You are using the lasted database!</string>
    <string name="notif_title_error">Error</string>
    <string name="network_error">Network error, please try again!</string>
    <string name="system_fail_error">System fail! Please restart application.</string>
    <string name="update_susscess">Update successfully!</string>
    <string name="clear_history_msg">Are you sure to delete all search history?</string>
    <string name="confirm_msg">Confirm</string>
    <string name="delete_search_history">Delete search history</string>
    <string name="app_version">App version</string>
    <string name="feedback_report">Report</string>
    <string name="rate_this_app">Vote this app on Play Store</string>
    <string name="this_app_on_facebook">Hợp Âm Chuẩn on Facebook</string>
    <string name="allow_3g_download">Use 3G to download</string>
    <string name="download_label">DOWNLOAD</string>
    <string name="checking_version">Checking version…</string>
    <string name="downloading">Downloading data…</string>
    <string name="updating_remote_song_to_local">Processing… Please wait…</string>
    <string name="synching_favorite">Synchronizing favorites…</string>
    <string name="synching_playlist">Synchronizing playlist…</string>
    <string name="no_connection">Could not connect to the Internet. Please check your Wifi/3G</string>
    <string name="need_login">You have to Login first!</string>
    <string name="notif_title_success">Success</string>
    <string name="login_success_click_to_sync">You are logged in, press OK to start synchronizing.</string>
    <string name="wrong_password">Username/Password is incorrect!</string>
    <string name="login_account_title">Login</string>
    <string name="checking_version_press_back">Updating songs…\nPress Back skip.</string>
</resources>