<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#586fa3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/song_detail_fontsize"
                android:textColor="#fff"
                android:id="@+id/btnFont" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/song_detail_scroll_label"
                android:id="@+id/btnScroll" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/song_detail_transpose"
                android:id="@+id/btnTrans" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/split_line"
                android:id="@+id/btnLineModeToggle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/play_music"
                android:id="@+id/btnPlayMusic" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>