<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    >
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_auto_scroll"
        android:id="@+id/turnOnChk"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/scrollTV"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@string/font_light"
            android:textSize="15sp"
            android:background="@drawable/song_count_bg"
            />
        <SeekBar
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollSB"
            android:max="9"
            />
        </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/toTopBtn"
        android:text="@string/to_top"
        />
</LinearLayout>
