<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dip"
            android:id="@+id/linear_layout"
            android:layout_alignParentLeft="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/proile_account_label" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >


                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/relativelayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:layout_marginBottom="9dp"
                        android:layout_marginTop="9dp"
                        android:src="@drawable/abc_ab_solid_light_holo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_toRightOf="@id/relativelayout"
                    android:paddingLeft="6dp"
                    android:orientation="vertical"
                    android:id="@+id/linearLayout"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/login_account"
                        android:textColor="#333"
                        android:textSize="20sp"
                        android:id="@+id/name"
                        style="@style/MarqueeText"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:id="@+id/mail"
                        android:textColor="#333"
                        style="@style/MarqueeText"
                        android:text="@string/login_account_description" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <Button
                    android:id="@+id/btnSync"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_sync_now" />
                <TextView
                    android:layout_below="@id/btnSync"
                    android:id="@+id/btnLogout"
                    android:layout_alignParentRight="true"
                    android:textSize="17sp"
                    android:clickable="true"
                    android:textColor="@color/plus_color"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_logout"
                    />
                </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>
