<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/abc_menu_dropdown_panel_holo_light"
    >


            <!-- button layout -->
            <LinearLayout
                android:orientation="vertical"
                android:paddingLeft="4.0dip"
                android:paddingTop="5.0dip"
                android:paddingRight="4.0dip"
                android:paddingBottom="1.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_weight="1.0"
                    android:textColor="#000"
                    android:id="@+id/song_list_menu_addtofavorite"
                    android:gravity="left|center_vertical"
                    android:background="@drawable/dropmenu_item"
                    android:text="@string/song_detail_menu_favorite" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="#000"
                    android:id="@+id/song_list_menu_addtoplaylist"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:background="@drawable/dropmenu_item"
                    android:text="@string/song_detail_menu_addtoplaylist" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ccc"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:id="@+id/song_list_menu_share"
                    android:layout_weight="1.0"
                    android:gravity="left|center_vertical"
                    android:background="@drawable/dropmenu_item"
                    android:text="@string/song_detail_menu_share" />
            </LinearLayout>
</ScrollView>
