<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <!--  Header Starts-->
        <!--
        <RelativeLayout
            android:id="@+id/header"
            android:background="#eee"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/login_appname"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingLeft="80dp"
                android:textSize="30dp"
                android:fontFamily="@string/font_light" />

            <ImageView
                android:src="@drawable/logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/login_logo"
                android:layout_alignLeft="@id/login_appname" />

        </RelativeLayout>
        -->
        <!--  Header Ends -->

        <!--
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/header"
            android:background="#333" />
        -->
        <!-- Login Form -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dip"
            android:id="@+id/linear_layout"
            android:layout_below="@+id/header"
            android:layout_alignParentLeft="true">

            <!--  Email Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/login_username" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:id="@+id/username"
                android:singleLine="true" />
            <!--  Password Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/login_password" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:id="@+id/password"
                android:password="true" />

            <!-- button layout -->
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="4.0dip"
                android:paddingTop="5.0dip"
                android:paddingRight="4.0dip"
                android:paddingBottom="1.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_layout">

                <!-- Login button -->
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/login_loginbtn" />

                <!-- Cancel button -->
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/login_cancelbtn" />
            </LinearLayout>

        </LinearLayout>
        <!-- Login Form Ends -->

        <!-- Footer Start -->
        <!-- <LinearLayout android:id="@+id/footer"
                       android:layout_width="fill_parent"
                       android:orientation="horizontal"
                       android:layout_height="90dip"
                       android:background="@drawable/header_gradient"
                       android:layout_alignParentBottom="true">
         </LinearLayout>-->
        <!-- Footer Ends -->

    </RelativeLayout>

</ScrollView>
